Reply to first question

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -27,8 +13,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Requirement already satisfied: xgboost in /usr/local/lib/python3.12/dist-packages (3.1.2)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.12/dist-packages (from xgboost) (2.0.2)\n",
@@ -44,6 +30,24 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "collapsed": true,
+        "id": "tX3_KcYjpTS6",
+        "outputId": "762bfc0c-1c9a-40fc-fa8d-0421f8dbf74e"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Bibliothèques importées avec succès.\n"
+          ]
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -56,55 +60,20 @@
         "from sklearn.metrics import f1_score, confusion_matrix, classification_report\n",
         "\n",
         "print(\"Bibliothèques importées avec succès.\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "collapsed": true,
-        "id": "tX3_KcYjpTS6",
-        "outputId": "762bfc0c-1c9a-40fc-fa8d-0421f8dbf74e"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Bibliothèques importées avec succès.\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Étape 1 : Chargement des Données et Inspection Rapide"
-      ],
       "metadata": {
         "id": "FPg1hMd-p2ES"
-      }
+      },
+      "source": [
+        "Étape 1 : Chargement des Données et Inspection Rapide"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "try:\n",
-        "    train_df = pd.read_csv(\"train.csv\")\n",
-        "    test_df = pd.read_csv(\"test.csv\")\n",
-        "\n",
-        "    # Affichage des premières lignes pour vérifier le chargement\n",
-        "    print(\"--- TRAIN SET ---\")\n",
-        "    print(train_df.head())\n",
-        "    print(\"\\n--- TEST SET ---\")\n",
-        "    print(test_df.head())\n",
-        "\n",
-        "    # Vérification du déséquilibre (l'indice crucial de la détection de fraude)\n",
-        "    fraud_rate = train_df['is_fraud'].mean() * 100\n",
-        "    print(f\"\\nTaux de fraude dans le train set : {fraud_rate:.4f}% (Déséquilibre SÉVÈRE!)\")\n",
-        "\n",
-        "except FileNotFoundError:\n",
-        "    print(\"ERREUR : Fichiers 'train.csv' ou 'test.csv' introuvables. Vérifiez le nom et le chemin d'accès.\")"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -113,11 +82,10 @@
         "id": "TkWSAwoIp4Nm",
         "outputId": "4425aaf5-aca4-4d44-b069-11f50afe44c6"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "--- TRAIN SET ---\n",
             "                         transaction_id  step      type  amount customer_id  \\\n",
@@ -152,19 +120,54 @@
             "Taux de fraude dans le train set : 1.9833% (Déséquilibre SÉVÈRE!)\n"
           ]
         }
+      ],
+      "source": [
+        "try:\n",
+        "    train_df = pd.read_csv(\"ressources/train.csv\")\n",
+        "    test_df = pd.read_csv(\"ressources/test.csv\")\n",
+        "\n",
+        "    # Affichage des premières lignes pour vérifier le chargement\n",
+        "    print(\"--- TRAIN SET ---\")\n",
+        "    print(train_df.head())\n",
+        "    print(\"\\n--- TEST SET ---\")\n",
+        "    print(test_df.head())\n",
+        "\n",
+        "    # Vérification du déséquilibre (l'indice crucial de la détection de fraude)\n",
+        "    fraud_rate = train_df['is_fraud'].mean() * 100\n",
+        "    print(f\"\\nTaux de fraude dans le train set : {fraud_rate:.4f}% (Déséquilibre SÉVÈRE!)\")\n",
+        "\n",
+        "except FileNotFoundError:\n",
+        "    print(\"ERREUR : Fichiers 'train.csv' ou 'test.csv' introuvables. Vérifiez le nom et le chemin d'accès.\")"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Étape 2 : Feature Engineering"
-      ],
       "metadata": {
         "id": "xs8Ph_reqH4b"
-      }
+      },
+      "source": [
+        "Étape 2 : Feature Engineering"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NoKXzs9iqSs-",
+        "outputId": "3d11bdb3-6147-44d3-9441-c8618ed01af2"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "✅ Feature Engineering terminé et données séparées.\n"
+          ]
+        }
+      ],
       "source": [
         "def create_temporal_features(df):\n",
         "    \"\"\"Création des features temporelles (jour, heure, nuit, weekend) à partir de 'step'.\"\"\"\n",
@@ -216,36 +219,55 @@
         "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
         "\n",
         "print(\"✅ Feature Engineering terminé et données séparées.\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "NoKXzs9iqSs-",
-        "outputId": "3d11bdb3-6147-44d3-9441-c8618ed01af2"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "✅ Feature Engineering terminé et données séparées.\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Étape 3 : Préprocesseur et Baseline (Régression Logistique)"
-      ],
       "metadata": {
         "id": "qe_wCq2JqzJV"
-      }
+      },
+      "source": [
+        "Étape 3 : Préprocesseur et Baseline (Régression Logistique)"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "collapsed": true,
+        "id": "9-DCmYQ1q_gz",
+        "outputId": "3111e95e-665f-41e6-b972-89433d1cc9a2"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "🔄 Entraînement de la Baseline (Rég. Logistique)...\n",
+            "\n",
+            "--- Résultats de la Baseline ---\n",
+            "F1-Score Baseline: **0.1416**\n",
+            "\n",
+            "Matrice de Confusion (Baseline) :\n",
+            " [[4569 1312]\n",
+            " [  10  109]]\n",
+            "\n",
+            "Rapport de Classification (Baseline) :\n",
+            "               precision    recall  f1-score   support\n",
+            "\n",
+            "           0       1.00      0.78      0.87      5881\n",
+            "           1       0.08      0.92      0.14       119\n",
+            "\n",
+            "    accuracy                           0.78      6000\n",
+            "   macro avg       0.54      0.85      0.51      6000\n",
+            "weighted avg       0.98      0.78      0.86      6000\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# --- Définition des Features pour le Préprocesseur ---\n",
         "numerical_features = ['amount', 'age', 'client_txn_count_24h', 'amount_vs_mean_type']\n",
@@ -282,55 +304,72 @@
         "print(f\"F1-Score Baseline: **{f1_baseline:.4f}**\")\n",
         "print(\"\\nMatrice de Confusion (Baseline) :\\n\", confusion_matrix(y_val, y_pred_baseline))\n",
         "print(\"\\nRapport de Classification (Baseline) :\\n\", classification_report(y_val, y_pred_baseline))"
-      ],
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "suiLv2jSrKNE"
+      },
+      "source": [
+        "Étape 4 : Modèle Avancé (XGBoost) et Optimisation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
-        "id": "9-DCmYQ1q_gz",
-        "outputId": "3111e95e-665f-41e6-b972-89433d1cc9a2"
+        "id": "TamlEeZHrN7A",
+        "outputId": "d924310b-c839-489f-a16c-4426f25ba42c"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "🔄 Entraînement de la Baseline (Rég. Logistique)...\n",
             "\n",
-            "--- Résultats de la Baseline ---\n",
-            "F1-Score Baseline: **0.1416**\n",
+            "🔄 Entraînement du Modèle Final (XGBoost)...\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/xgboost/training.py:199: UserWarning: [06:21:59] WARNING: /workspace/src/learner.cc:790: \n",
+            "Parameters: { \"use_label_encoder\" } are not used.\n",
             "\n",
-            "Matrice de Confusion (Baseline) :\n",
-            " [[4569 1312]\n",
-            " [  10  109]]\n",
+            "  bst.update(dtrain, iteration=i, fobj=obj)\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
             "\n",
-            "Rapport de Classification (Baseline) :\n",
+            "--- Résultats du Modèle Final (XGBoost) ---\n",
+            "F1-Score Final (XGBoost): **0.7117**\n",
+            "\n",
+            "Matrice de Confusion (XGBoost) :\n",
+            " [[5819   62]\n",
+            " [  19  100]]\n",
+            "\n",
+            "Rapport de Classification (XGBoost) :\n",
             "               precision    recall  f1-score   support\n",
             "\n",
-            "           0       1.00      0.78      0.87      5881\n",
-            "           1       0.08      0.92      0.14       119\n",
+            "           0       1.00      0.99      0.99      5881\n",
+            "           1       0.62      0.84      0.71       119\n",
             "\n",
-            "    accuracy                           0.78      6000\n",
-            "   macro avg       0.54      0.85      0.51      6000\n",
-            "weighted avg       0.98      0.78      0.86      6000\n",
+            "    accuracy                           0.99      6000\n",
+            "   macro avg       0.81      0.91      0.85      6000\n",
+            "weighted avg       0.99      0.99      0.99      6000\n",
             "\n"
           ]
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Étape 4 : Modèle Avancé (XGBoost) et Optimisation"
       ],
-      "metadata": {
-        "id": "suiLv2jSrKNE"
-      }
-    },
-    {
-      "cell_type": "code",
       "source": [
         "# --- Calcul du poids pour la classe positive (Gestion du Déséquilibre pour XGBoost) ---\n",
         "# On dit à XGBoost que la classe '1' (fraude) est beaucoup plus importante\n",
@@ -365,72 +404,56 @@
         "print(f\"F1-Score Final (XGBoost): **{f1_xgb:.4f}**\")\n",
         "print(\"\\nMatrice de Confusion (XGBoost) :\\n\", confusion_matrix(y_val, y_pred_xgb))\n",
         "print(\"\\nRapport de Classification (XGBoost) :\\n\", classification_report(y_val, y_pred_xgb))"
-      ],
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FpPYDbOvrY22"
+      },
+      "source": [
+        "Étape 5 : Génération de la Soumission Finale"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "collapsed": true,
-        "id": "TamlEeZHrN7A",
-        "outputId": "d924310b-c839-489f-a16c-4426f25ba42c"
+        "id": "1E3p68NErb7y",
+        "outputId": "93e3a5d9-ede4-4779-aa61-90d1951fece4"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\n",
-            "🔄 Entraînement du Modèle Final (XGBoost)...\n"
+            "🔄 Entraînement final du XGBoost sur l'intégralité du TRAIN SET...\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stderr",
+          "output_type": "stream",
           "text": [
-            "/usr/local/lib/python3.12/dist-packages/xgboost/training.py:199: UserWarning: [06:21:59] WARNING: /workspace/src/learner.cc:790: \n",
+            "/usr/local/lib/python3.12/dist-packages/xgboost/training.py:199: UserWarning: [06:22:55] WARNING: /workspace/src/learner.cc:790: \n",
             "Parameters: { \"use_label_encoder\" } are not used.\n",
             "\n",
             "  bst.update(dtrain, iteration=i, fobj=obj)\n"
           ]
         },
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
+            "🚀 Génération des prédictions pour la soumission...\n",
             "\n",
-            "--- Résultats du Modèle Final (XGBoost) ---\n",
-            "F1-Score Final (XGBoost): **0.7117**\n",
-            "\n",
-            "Matrice de Confusion (XGBoost) :\n",
-            " [[5819   62]\n",
-            " [  19  100]]\n",
-            "\n",
-            "Rapport de Classification (XGBoost) :\n",
-            "               precision    recall  f1-score   support\n",
-            "\n",
-            "           0       1.00      0.99      0.99      5881\n",
-            "           1       0.62      0.84      0.71       119\n",
-            "\n",
-            "    accuracy                           0.99      6000\n",
-            "   macro avg       0.81      0.91      0.85      6000\n",
-            "weighted avg       0.99      0.99      0.99      6000\n",
-            "\n"
+            "✅ Fichier submission.csv généré avec 10000 prédictions. Vous pouvez le télécharger dans l'onglet 'Fichiers' de Colab.\n"
           ]
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Étape 5 : Génération de la Soumission Finale"
       ],
-      "metadata": {
-        "id": "FpPYDbOvrY22"
-      }
-    },
-    {
-      "cell_type": "code",
       "source": [
         "# 1. Entraînement final sur l'ensemble des données d'entraînement (X complet, y complet)\n",
         "print(\"\\n🔄 Entraînement final du XGBoost sur l'intégralité du TRAIN SET...\")\n",
@@ -452,44 +475,21 @@
         "submission.to_csv(\"submission.csv\", index=False)\n",
         "\n",
         "print(f\"\\n✅ Fichier submission.csv généré avec {len(submission)} prédictions. Vous pouvez le télécharger dans l'onglet 'Fichiers' de Colab.\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "1E3p68NErb7y",
-        "outputId": "93e3a5d9-ede4-4779-aa61-90d1951fece4"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "🔄 Entraînement final du XGBoost sur l'intégralité du TRAIN SET...\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.12/dist-packages/xgboost/training.py:199: UserWarning: [06:22:55] WARNING: /workspace/src/learner.cc:790: \n",
-            "Parameters: { \"use_label_encoder\" } are not used.\n",
-            "\n",
-            "  bst.update(dtrain, iteration=i, fobj=obj)\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "🚀 Génération des prédictions pour la soumission...\n",
-            "\n",
-            "✅ Fichier submission.csv généré avec 10000 prédictions. Vous pouvez le télécharger dans l'onglet 'Fichiers' de Colab.\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
